--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testing
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/losmessias
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.main.allow-circular-references=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
